workaround bug 224600 / active but unrisen windows don't go fullscreen

NOTICE that the correct solution would be to move any active FS client on top of the stack in layers.cpp but this might raise other issues.
this patch preserves the present behaviour but raises windows before setting the fullscreen. the only "issue" with this is that for setups that do not raise windows when activating them, setting an active but not risen client FS will cause a restack as sideeffect

BUG: 224600

svn path=/trunk/KDE/kdebase/workspace/; revision=1194908